fixed oversized charts and bleeding text in IE

--- a/web/themes/cbcny_theme/sass/partials/components/section/_section--full-text.scss
+++ b/web/themes/cbcny_theme/sass/partials/components/section/_section--full-text.scss
@@ -4,4 +4,9 @@
 
 .section--full-text {
   clear: both;
+
+  p {
+    //fix for IE11 - text was bleeding outside constrain
+    max-width: 100%;
+  }
 }
